--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,18 +19,14 @@ jobs:
     build:
         runs-on: ubuntu-latest
 
-        strategy:
-            matrix:
-                node-version: [22.x]
-
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
 
-            - name: Set up Node.js ${{ matrix.node-version }}
+            - name: Set up Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: ${{ matrix.node-version }}
+                  node-version: 22.x
 
             - name: Install dependencies
               run: npm install
@@ -61,7 +57,7 @@ jobs:
               uses: actions/configure-pages@v5
 
             - name: Upload artifact to Pages
-              uses: actions/upload-pages-artifact@v3
+              uses: actions/upload-pages-artifact@v4
               with:
                   path: "dist"
 
