fix(deploy): 添加构建产物未找到时的错误处理

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
               with:
                   name: build-artifact
                   path: dist
+                  if-no-files-found: error
 
     deploy:
         needs: build
