--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
 
         steps:
             - name: Download build artifact
-              uses: actions/download-artifact@v3
+              uses: actions/download-artifact@v4
               with:
                   name: build-artifact
 
@@ -58,9 +58,9 @@ jobs:
               uses: actions/configure-pages@v5
 
             - name: Upload artifact to Pages
-              uses: actions/upload-pages-artifact@v4
+              uses: actions/upload-pages-artifact@v3
               with:
-                  path: "dist"
+                  path: "."
 
             - name: Deploy to GitHub Pages
               id: deployment
